# halo2wrong

./: Cargo.toml
ecc/src/: general_ecc.rs
ecdsa/: Cargo.toml
ecdsa/src/: ecdsa.rs  expr.rs  foo.rs  lib.rs
halo2-semaphore/src/: main.rs
halo2-semaphore/src/gadget/: merkle.rs
halo2-semaphore/src/gadget/merkle/: chip.rs
maingate/src/: main_gate.rs
orchard/: Cargo.toml
orchard/src/: lib.rs
semaphore/: Cargo.toml  README.md
semaphore/src/: gadget.rs  main.rs  utils.rs
semaphore/src/gadget/: merkle.rs  poseidon.rs
semaphore/src/gadget/merkle/: chip.rs
semaphore/src/gadget/poseidon/: pow5t3.rs
semaphore/src/primitives/: poseidon.rs
semaphore/src/primitives/poseidon/: fp.rs  fq.rs  grain.rs  mds.rs  p128pow5t3.rs
