[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
ecc = { path = "../ecc", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
group = "0.12"
subtle = { version = "2.3", default-features = false }
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_10_22" }
bitvec = "0.20"

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }

