[package]
name = "semaphore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# funty="=1.1.0"
bitvec = "1"
ecc = { path = "../ecc", default-features = false }
# pasta_curves = "0.2.1"
# halo2 = "0.1.0-beta.1"
halo2wrong = { path = "../halo2wrong", default-features = false }
